Findbugs: valueOf is more efficient
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/imaging/trunk@1764296 13f79535-47bb-0310-9956-ffa450edef68